--- a/config/database.yml
+++ b/config/database.yml
@@ -24,6 +24,9 @@ default: &default
 development:
   <<: *default
   database: Load_Board_Backend_development
+  host: localhost
+  user: react_project
+  password: Jackdog1
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -58,6 +61,9 @@ development:
 test:
   <<: *default
   database: Load_Board_Backend_test
+  host: localhost
+  user: react_project
+  password: Jackdog1
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
